Introduced app pom.

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -17,6 +17,7 @@
     <description>A simple blog modules.</description>
 
     <modules>
+        <module>app</module>
     </modules>
 
 </project>
