--- a/modules/membership/pom.xml
+++ b/modules/membership/pom.xml
@@ -9,15 +9,9 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>sample-blog-app</artifactId>
-    <name>sample-blog-app</name>
-    <description>A simple blog app module.</description>
+    <artifactId>sample-blog-membership</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.github</groupId>
-            <artifactId>sample-blog-membership</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
+    <name>sample-blog-membership</name>
+    <description>A simple blog membership module.</description>
+
 </project>
