Introduced posts pom.

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>app</module>
         <module>membership</module>
+        <module>posts</module>
     </modules>
 
 </project>
