--- a/modules/app/pom.xml
+++ b/modules/app/pom.xml
@@ -19,5 +19,10 @@
             <artifactId>sample-blog-membership</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.github</groupId>
+            <artifactId>sample-blog-posts</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
