--- a/modules/membership/pom.xml
+++ b/modules/membership/pom.xml
@@ -14,4 +14,12 @@
     <name>sample-blog-membership</name>
     <description>A simple blog membership module.</description>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.github</groupId>
+            <artifactId>sample-blog-shared</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
