--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -8,6 +8,10 @@
     <artifactId>sample-blog-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <prerequisites>
+        <maven>3.0</maven>
+    </prerequisites>
+
     <name>sample-blog-parent</name>
     <description>A simple blog parent pom.</description>
 
