--- a/modules/app/pom.xml
+++ b/modules/app/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
+        <dependency>
             <groupId>com.github</groupId>
             <artifactId>sample-blog-membership</artifactId>
             <version>1.0-SNAPSHOT</version>
