--- a/modules/shared/pom.xml
+++ b/modules/shared/pom.xml
@@ -14,4 +14,12 @@
     <name>sample-blog-shared</name>
     <description>A simple blog shared module.</description>
 
+
+    <dependencies>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.1.0.Final</version>
+        </dependency>
+    </dependencies>
 </project>
