--- a/modules/membership/pom.xml
+++ b/modules/membership/pom.xml
@@ -16,6 +16,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.1.0.Final</version>
+        </dependency>
+        <dependency>
             <groupId>com.github</groupId>
             <artifactId>sample-blog-shared</artifactId>
             <version>1.0-SNAPSHOT</version>
