--- a/modules/app/pom.xml
+++ b/modules/app/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -18,7 +18,7 @@
 
     <properties>
         <spring.boot.dependencies.version>1.4.0.RELEASE</spring.boot.dependencies.version>
-        <spring.boot.maven.plugin.version>${spring.boot.dependencies.version}</spring.boot.maven.plugin.version>
+        <spring.boot.maven.plugin>${spring.boot.dependencies.version}</spring.boot.maven.plugin>
     </properties>
 
     <dependencyManagement>
@@ -60,7 +60,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring.boot.maven.plugin.version}</version>
+                <version>${spring.boot.maven.plugin}</version>
                 <executions>
                     <execution>
                         <goals>
