--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -18,6 +18,7 @@
   <properties>
     <java.version>1.8</java.version>
     <junit.version>4.12</junit.version>
+    <logback.classic.version>1.1.5</logback.classic.version>
     <validation.api.version>1.1.0.Final</validation.api.version>
     <maven.assembly.plugin>2.6</maven.assembly.plugin>
     <maven.clean.plugin>3.0.0</maven.clean.plugin>
@@ -48,6 +49,11 @@
         <artifactId>junit</artifactId>
         <version>${junit.version}</version>
         <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>${logback.classic.version}</version>
       </dependency>
       <dependency>
         <groupId>javax.validation</groupId>
