--- a/modules/membership/pom.xml
+++ b/modules/membership/pom.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.github</groupId>
-        <artifactId>sample-blog-modules</artifactId>
+        <artifactId>sample-blog-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../../parent</relativePath>
     </parent>
 
     <artifactId>sample-blog-membership</artifactId>
@@ -15,11 +16,6 @@
     <description>A simple blog membership module.</description>
 
     <dependencies>
-        <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-            <version>1.1.0.Final</version>
-        </dependency>
         <dependency>
             <groupId>com.github</groupId>
             <artifactId>sample-blog-shared</artifactId>
