--- a/modules/shared/pom.xml
+++ b/modules/shared/pom.xml
@@ -5,8 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.github</groupId>
-        <artifactId>sample-blog-modules</artifactId>
+        <artifactId>sample-blog-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../../parent</relativePath>
     </parent>
 
     <artifactId>sample-blog-shared</artifactId>
@@ -14,12 +15,10 @@
     <name>sample-blog-shared</name>
     <description>A simple blog shared module.</description>
 
-
     <dependencies>
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
-            <version>1.1.0.Final</version>
         </dependency>
     </dependencies>
 </project>
