--- a/modules/membership/pom.xml
+++ b/modules/membership/pom.xml
@@ -17,6 +17,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.github</groupId>
             <artifactId>sample-blog-shared</artifactId>
             <version>1.0-SNAPSHOT</version>
