--- a/modules/app/pom.xml
+++ b/modules/app/pom.xml
@@ -2,75 +2,79 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>com.github</groupId>
-        <artifactId>sample-blog-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        <relativePath>../../parent</relativePath>
-    </parent>
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>com.github</groupId>
+    <artifactId>sample-blog-parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <relativePath>../../parent</relativePath>
+  </parent>
 
-    <artifactId>sample-blog-app</artifactId>
-    <name>sample-blog-app</name>
-    <description>A simple blog app module.</description>
-    <prerequisites>
-        <maven>3.2.1</maven>
-    </prerequisites>
+  <artifactId>sample-blog-app</artifactId>
+  <name>sample-blog-app</name>
+  <description>A simple blog app module.</description>
+  <prerequisites>
+    <maven>3.2.1</maven>
+  </prerequisites>
 
-    <properties>
-        <spring.boot.dependencies.version>1.4.0.RELEASE</spring.boot.dependencies.version>
-        <spring.boot.maven.plugin>${spring.boot.dependencies.version}</spring.boot.maven.plugin>
-    </properties>
+  <properties>
+    <spring.boot.dependencies.version>
+      1.4.0.RELEASE
+    </spring.boot.dependencies.version>
+    <spring.boot.maven.plugin>
+      ${spring.boot.dependencies.version}
+    </spring.boot.maven.plugin>
+  </properties>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <type>pom</type>
-                <version>${spring.boot.dependencies.version}</version>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
+  <dependencyManagement>
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
-            <version>1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github</groupId>
-            <artifactId>sample-blog-membership</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github</groupId>
-            <artifactId>sample-blog-posts</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <type>pom</type>
+        <version>${spring.boot.dependencies.version}</version>
+        <scope>import</scope>
+      </dependency>
     </dependencies>
+  </dependencyManagement>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring.boot.maven.plugin}</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+  <dependencies>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.inject</groupId>
+      <artifactId>javax.inject</artifactId>
+      <version>1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github</groupId>
+      <artifactId>sample-blog-membership</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github</groupId>
+      <artifactId>sample-blog-posts</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+  </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>${spring.boot.maven.plugin}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
