--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -18,8 +18,15 @@
   <properties>
     <java.version>1.8</java.version>
     <junit.version>4.12</junit.version>
+    <javax.inject>1</javax.inject>
     <logback.classic.version>1.1.5</logback.classic.version>
     <validation.api.version>1.1.0.Final</validation.api.version>
+    <spring.boot.dependencies.version>
+      1.4.0.RELEASE
+    </spring.boot.dependencies.version>
+    <spring.boot.maven.plugin>
+      ${spring.boot.dependencies.version}
+    </spring.boot.maven.plugin>
     <maven.assembly.plugin>2.6</maven.assembly.plugin>
     <maven.clean.plugin>3.0.0</maven.clean.plugin>
     <maven.checkstyle.plugin>2.17</maven.checkstyle.plugin>
@@ -45,10 +52,19 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>${junit.version}</version>
-        <scope>test</scope>
+        <groupId>javax.validation</groupId>
+        <artifactId>validation-api</artifactId>
+        <version>${validation.api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.validation</groupId>
+        <artifactId>validation-api</artifactId>
+        <version>${validation.api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.inject</groupId>
+        <artifactId>javax.inject</artifactId>
+        <version>${javax.inject}</version>
       </dependency>
       <dependency>
         <groupId>ch.qos.logback</groupId>
@@ -56,9 +72,17 @@
         <version>${logback.classic.version}</version>
       </dependency>
       <dependency>
-        <groupId>javax.validation</groupId>
-        <artifactId>validation-api</artifactId>
-        <version>${validation.api.version}</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <type>pom</type>
+        <version>${spring.boot.dependencies.version}</version>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>${junit.version}</version>
+        <scope>test</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
