Eliminated duplicate for validation api dependency; replaced logback classic with slf4j api.

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -19,7 +19,7 @@
     <java.version>1.8</java.version>
     <junit.version>4.12</junit.version>
     <javax.inject>1</javax.inject>
-    <logback.classic.version>1.1.5</logback.classic.version>
+    <slf4j.api.version>1.7.21</slf4j.api.version>
     <validation.api.version>1.1.0.Final</validation.api.version>
     <spring.boot.dependencies.version>
       1.4.0.RELEASE
@@ -57,19 +57,14 @@
         <version>${validation.api.version}</version>
       </dependency>
       <dependency>
-        <groupId>javax.validation</groupId>
-        <artifactId>validation-api</artifactId>
-        <version>${validation.api.version}</version>
-      </dependency>
-      <dependency>
         <groupId>javax.inject</groupId>
         <artifactId>javax.inject</artifactId>
         <version>${javax.inject}</version>
       </dependency>
       <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-classic</artifactId>
-        <version>${logback.classic.version}</version>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.api.version}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework.boot</groupId>
