--- a/modules/membership/pom.xml
+++ b/modules/membership/pom.xml
@@ -25,6 +25,10 @@
       <artifactId>validation-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.github</groupId>
       <artifactId>sample-blog-shared</artifactId>
       <version>1.0-SNAPSHOT</version>
