--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -17,7 +17,8 @@
 
   <properties>
     <java.version>1.8</java.version>
-    <junit.version>4.12</junit.version>
+    <testng.version>6.9.10</testng.version>
+    <mockito.version>1.10.19</mockito.version>
     <javax.inject>1</javax.inject>
     <slf4j.api.version>1.7.21</slf4j.api.version>
     <validation.api.version>1.1.0.Final</validation.api.version>
@@ -74,9 +75,15 @@
         <scope>import</scope>
       </dependency>
       <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>${junit.version}</version>
+        <groupId>org.testng</groupId>
+        <artifactId>testng</artifactId>
+        <version>${testng.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>${mockito.version}</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
