Added create account messages to user service properties.

--- a/modules/membership/src/main/resources/user-service.properties
+++ b/modules/membership/src/main/resources/user-service.properties
@@ -1,2 +1,4 @@
 signInFailed=The username or password provided is incorrect.
 userLocked=The account is locked. Contact system administrator, please.
+alreadyRegistered=The user with such username is already registered. Please try another.
+unableCreateAccount=The system was unable to create an account for you. Please try again later.
