Introduced aws maven module.

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -17,6 +17,7 @@
     <module>membership</module>
     <module>posts</module>
     <module>app</module>
+    <module>aws</module>
   </modules>
 
 </project>
