Use version variable in POM files; added comment for test dependencies start.

--- a/modules/shared/pom.xml
+++ b/modules/shared/pom.xml
@@ -20,5 +20,6 @@
       <groupId>javax.validation</groupId>
       <artifactId>validation-api</artifactId>
     </dependency>
+    <!-- Test scope dependencies start here. -->
   </dependencies>
 </project>
