--- a/modules/aws/pom.xml
+++ b/modules/aws/pom.xml
@@ -33,13 +33,14 @@
     <dependency>
       <groupId>com.github</groupId>
       <artifactId>sample-blog-membership</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>com.github</groupId>
       <artifactId>sample-blog-posts</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${version}</version>
     </dependency>
+    <!-- Test scope dependencies start here. -->
   </dependencies>
 
   <build>
