--- a/modules/membership/pom.xml
+++ b/modules/membership/pom.xml
@@ -31,8 +31,9 @@
     <dependency>
       <groupId>com.github</groupId>
       <artifactId>sample-blog-shared</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${version}</version>
     </dependency>
+    <!-- Test scope dependencies start here. -->
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
