--- a/modules/posts/pom.xml
+++ b/modules/posts/pom.xml
@@ -19,8 +19,9 @@
     <dependency>
       <groupId>com.github</groupId>
       <artifactId>sample-blog-shared</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${version}</version>
     </dependency>
+    <!-- Test scope dependencies start here. -->
   </dependencies>
 
 </project>
