--- a/modules/posts/pom.xml
+++ b/modules/posts/pom.xml
@@ -16,7 +16,7 @@
     <dependency>
       <groupId>com.github</groupId>
       <artifactId>sample-blog-shared</artifactId>
-      <version>${version}</version>
+      <version>${project.version}</version>
     </dependency>
     <!-- Test scope dependencies start here. -->
   </dependencies>
