--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -8,6 +8,9 @@
   <artifactId>sample-blog-modules</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
+  <prerequisites>
+    <maven>3.0</maven>
+  </prerequisites>
 
   <modules>
     <module>shared</module>
