--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -14,31 +14,31 @@
 
   <properties>
     <java.version>1.8</java.version>
-    <testng.version>6.10</testng.version>
-    <mockito.version>2.7.5</mockito.version>
+    <testng.version>6.11</testng.version>
+    <mockito.version>2.8.9</mockito.version>
     <javax.inject>1</javax.inject>
-    <slf4j.api.version>1.7.22</slf4j.api.version>
+    <slf4j.api.version>1.8.0-alpha2</slf4j.api.version>
     <validation.api.version>1.1.0.Final</validation.api.version>
-    <spring.boot.version>1.5.1.RELEASE</spring.boot.version>
+    <spring.boot.version>1.5.3.RELEASE</spring.boot.version>
     <aws.lambda.java.core.version>1.1.0</aws.lambda.java.core.version>
     <maven.assembly.plugin>3.0.0</maven.assembly.plugin>
     <maven.clean.plugin>3.0.0</maven.clean.plugin>
     <maven.checkstyle.plugin>2.17</maven.checkstyle.plugin>
-    <maven.compiler.plugin>3.6.0</maven.compiler.plugin>
-    <maven.dependency.plugin>3.0.0</maven.dependency.plugin>
+    <maven.compiler.plugin>3.6.1</maven.compiler.plugin>
+    <maven.dependency.plugin>3.0.1</maven.dependency.plugin>
     <maven.deploy.plugin>2.8.2</maven.deploy.plugin>
     <maven.enforcer.plugin>1.4.1</maven.enforcer.plugin>
-    <maven.failsafe.plugin>2.19.1</maven.failsafe.plugin>
+    <maven.failsafe.plugin>2.20</maven.failsafe.plugin>
     <maven.help.plugin>2.2</maven.help.plugin>
     <maven.install.plugin>2.5.2</maven.install.plugin>
     <maven.jar.plugin>3.0.2</maven.jar.plugin>
-    <maven.pmd.plugin>3.7</maven.pmd.plugin>
+    <maven.pmd.plugin>3.8</maven.pmd.plugin>
     <maven.release.plugin>2.5.3</maven.release.plugin>
     <maven.resources.plugin>3.0.2</maven.resources.plugin>
-    <maven.shade.plugin>2.4.3</maven.shade.plugin>
+    <maven.shade.plugin>3.0.0</maven.shade.plugin>
     <maven.site.plugin>3.6</maven.site.plugin>
     <maven.source.plugin>3.0.1</maven.source.plugin>
-    <maven.surefire.plugin>2.19.1</maven.surefire.plugin>
+    <maven.surefire.plugin>2.20</maven.surefire.plugin>
     <maven.version.range>[3.0.5,3.3.9]</maven.version.range>
     <maven.versions.plugin>2.2</maven.versions.plugin>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
