--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -18,7 +18,7 @@
     <mockito.version>2.8.9</mockito.version>
     <javax.inject>1</javax.inject>
     <slf4j.api.version>1.8.0-alpha2</slf4j.api.version>
-    <validation.api.version>1.1.0.Final</validation.api.version>
+    <validation.api.version>2.0.0.Beta2</validation.api.version>
     <spring.boot.version>1.5.3.RELEASE</spring.boot.version>
     <aws.lambda.java.core.version>1.1.0</aws.lambda.java.core.version>
     <maven.assembly.plugin>3.0.0</maven.assembly.plugin>
