--- a/modules/app/pom.xml
+++ b/modules/app/pom.xml
@@ -58,13 +58,25 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
         <configuration>
+          <minimizeJar>true</minimizeJar>
+          <createDependencyReducedPom>
+            false
+          </createDependencyReducedPom>
           <transformers>
             <transformer
                 implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-              <mainClass>com.meteogroup.region.api.infrastructure.web.Application</mainClass>
+              <mainClass>com.github.blog.api.Application</mainClass>
             </transformer>
           </transformers>
         </configuration>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.springframework.boot</groupId>
