--- a/modules/shared/src/main/resources/ValidationMessages.properties
+++ b/modules/shared/src/main/resources/ValidationMessages.properties
@@ -1,3 +1,2 @@
-javax.validation.constraints.NotNull.message=Required field cannot be left blank.
-javax.validation.constraints.Size.message=The length must fall within the range {min} - {max} characters.
-com.github.blog.shared.validator.constraints.NotEmpty.message=Required field cannot be left blank.
+com.github.blog.shared.validator.constraints.Length.message=The length must fall within the range {min} - {max} characters.
+com.github.blog.shared.validator.constraints.Length.messageRequired=Required field cannot be left blank.
